Border radius fix for Chat window on mobile

--- a/src/styles/partials/_conversationModel.scss
+++ b/src/styles/partials/_conversationModel.scss
@@ -112,5 +112,8 @@ button {
       height: 60px;
       border-radius: 0;
     }
+    &__convo {
+      border-radius: 0;
+    }
   }
 }
